--- a/button.css
+++ b/button.css
@@ -6,12 +6,13 @@
   
 .messagesContainer {
   margin: 30 auto;
-  width: 90%;
+  width: 100%;
   height: 85%;
-  max-width: 1000px;
+  max-width: 1300px;
   padding: 1em;
   border: 1px solid #CCC;
-  border-radius: 1em;
+  /* border-radius: 1em; */
+  background-color: rgb(8, 150, 245);
   overflow-y: scroll;
 }
 
@@ -25,32 +26,41 @@ div{
 
 .row {
   border-radius: 1em;
-  border: 1px solid #CCC;
+  border: 1px solid  rgba(56, 54, 54, 0.897);
   padding: 1em;
   margin: 1em;
-  width:70%;
-  background-color: gainsboro;
+  margin-top: 0px;
+  width:60%;
+  background-color:white;
+  align-content: center;
+
 }
 
 .time {
-  display: inline-block;
   box-sizing: border-box;
-  width: 30%;
+  position: relative;
+  text-align: right;
+  right: 30%;
+  bottom: 10px;
 }
 
 .user {
   display: inline-block;
   box-sizing: border-box;
-  width: 30%;
+  width: 20%;
+  position: relative;
+  left: 1%;
+  top:-15px;
 }
 .userImg {
   display: inline-block;
-  width:8%;
-  height:8%;
+  width:40px;
+  height:40px;
+  border-radius: 20em;
 }
 
 .message {
   display: inline-block;
   box-sizing: border-box;
-  width: 90%;
+  width: 95%;
 }
