--- a/button.css
+++ b/button.css
@@ -1,9 +1,18 @@
-﻿.button {
-    margin: 20px auto;
-    width: 100px;
-    align-content: center;
-  }
-  
+﻿#sender {
+  font-size: 1.5em;
+  font-weight: bold;
+  padding: 5px 15px;
+  background-color: lawngreen;
+  color: #fff;
+  border-style: none;
+  position: relative;
+  top: -1em;
+}
+
+#sender:hover {
+  background-color: rgb(9, 107, 9);
+  color: #fff;
+}  
 .messagesContainer {
   margin: 30 auto;
   width: 100%;
@@ -14,6 +23,7 @@
   /* border-radius: 1em; */
   background-color: rgb(8, 150, 245);
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 div{
@@ -22,18 +32,34 @@ div{
 
 .page {
   width: 100%;
+  margin: 0%;
 }
 
 .row {
-  border-radius: 1em;
-  border: 1px solid  rgba(56, 54, 54, 0.897);
-  padding: 1em;
-  margin: 1em;
-  margin-top: 0px;
+  border-radius: 3em;
   width:60%;
   background-color:white;
   align-content: center;
-
+  position: relative;
+  display: inline-block;
+  margin: 1.5em 15px 1.5em 0;
+  padding: 7px 10px;
+  min-width: 120px;
+  max-width: 100%;
+  font-size: 16px;
+  top:2.5em;
+  left:-22%;
+}
+.row:before {
+  content: "";
+  position: absolute;
+  left: -10px;
+  margin-top: -15px;
+  border: 15px solid transparent;
+  border-right: 15px solid white;
+  z-index: 0;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
 
 .time {
@@ -41,7 +67,8 @@ div{
   position: relative;
   text-align: right;
   right: 30%;
-  bottom: 10px;
+  color:gainsboro;
+  top: 1em;
 }
 
 .user {
@@ -51,6 +78,7 @@ div{
   position: relative;
   left: 1%;
   top:-15px;
+  color:gainsboro;
 }
 .userImg {
   display: inline-block;
@@ -59,8 +87,74 @@ div{
   border-radius: 20em;
 }
 
+.myRow {
+  border-radius: 3em;
+  width:60%;
+  background-color :rgba(126, 252, 0);
+  align-content: center;
+  position: relative;
+  left: 30%;
+  margin: 1.5em 15px 1.5em 0;
+  display: inline-block;
+  padding: 7px 25px;
+  min-width: 120px;
+  max-width: 100%;
+  font-size: 16px;
+}
+.myRow:before {
+  content: "";
+  position: absolute;
+  left: 95%;
+  margin-top: -15px;
+  border: 15px solid transparent;
+  border-left: 15px solid  rgba(126, 252, 0);
+  z-index: 0;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.myTime {
+  box-sizing: border-box;
+  position: relative;
+  text-align: left;
+  left: 30%;
+  color:gainsboro;
+}
+.myUser {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 70%;
+  position: relative;
+  text-align: right;
+  color:gainsboro;
+  left: 20%
+}
+.myUserImg {
+  display: inline-block;
+  width:40px;
+  height:40px;
+  border-radius: 20em;
+  position: relative;
+  top: 0.5em;
+  left: 22%;
+}
+
 .message {
   display: inline-block;
   box-sizing: border-box;
+  word-wrap:normal;
   width: 95%;
 }
+
+.textBox{
+  display: inline-block;
+  height:5em;
+  resize: none;
+  width: 50%;
+}
+
+
+form{
+  text-align:center;
+}
+
