--- a/button.css
+++ b/button.css
@@ -101,6 +101,7 @@ div{
   width:40px;
   height:40px;
   border-radius: 20em;
+  background: radial-gradient(rgb(91, 168, 231),#fff);
 }
 
 .myRow {
