--- a/button.css
+++ b/button.css
@@ -57,24 +57,22 @@ div{
   background-color:white;
   align-content: center;
   position: relative;
-  display: inline-block;
+  display: block;
   margin: 1.5em 15px 1.5em 0;
-  padding: 7px 10px;
+  padding: 7px 20px;
   min-width: 120px;
   max-width: 100%;
   font-size: 16px;
-  top:2.5em;
-  left:-22%;
+  top:-1em;
+  left:1%;
 }
 .row:before {
   content: "";
   position: absolute;
-  left: -10px;
   margin-top: -15px;
   border: 15px solid transparent;
   border-right: 15px solid white;
   z-index: 0;
-  -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
 
@@ -82,9 +80,9 @@ div{
   box-sizing: border-box;
   position: relative;
   text-align: right;
-  right: 30%;
+  right: 35%;
   color:gainsboro;
-  top: 1em;
+  top: -2em;
 }
 
 .user {
@@ -126,7 +124,6 @@ div{
   border: 15px solid transparent;
   border-left: 15px solid  rgba(126, 252, 0);
   z-index: 0;
-  -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 
@@ -136,6 +133,7 @@ div{
   text-align: left;
   left: 30%;
   color:gainsboro;
+  top: -1em;
 }
 .myUser {
   display: inline-block;
