--- a/slackapi.css
+++ b/slackapi.css
@@ -31,12 +31,11 @@
 
 .messagesContainer {
   margin: 30 auto;
-  width: 100%;
+  width: 95%;
   height: 85%;
   max-width: 1300px;
   padding: 1em;
   border: 1px solid #CCC;
-  /* border-radius: 1em; */
   background-color: rgb(8, 150, 245);
   overflow-y: scroll;
   overflow-x: hidden;
@@ -53,15 +52,13 @@ div{
 
 .row {
   border-radius: 3em;
-  width:60%;
   background-color:white;
   align-content: center;
   position: relative;
   display: block;
   margin: 1.5em 15px 1.5em 0;
   padding: 7px 20px;
-  min-width: 120px;
-  max-width: 100%;
+  max-width: 60%;
   font-size: 16px;
   top:-1em;
   left:1%;
@@ -102,24 +99,22 @@ div{
   background: radial-gradient(rgb(91, 168, 231),#fff);
 }
 
-.myRow {
+.mineRow {
   border-radius: 3em;
-  width:60%;
   background-color :rgba(126, 252, 0);
   align-content: center;
   position: relative;
   left: 30%;
   margin: 1.5em 15px 1.5em 0;
-  display: inline-block;
+  /* display: inline-block; */
   padding: 7px 25px;
-  min-width: 120px;
   max-width: 100%;
   font-size: 16px;
 }
-.myRow:before {
+.mineRow:before {
   content: "";
   position: absolute;
-  left: 95%;
+  left: 90%;
   margin-top: -15px;
   border: 15px solid transparent;
   border-left: 15px solid  rgba(126, 252, 0);
@@ -127,7 +122,7 @@ div{
   transform: rotate(45deg);
 }
 
-.myTime {
+.mineTime {
   box-sizing: border-box;
   position: relative;
   text-align: left;
@@ -135,7 +130,7 @@ div{
   color:gainsboro;
   top: -1em;
 }
-.myUser {
+.mineUser {
   display: inline-block;
   box-sizing: border-box;
   width: 70%;
@@ -144,7 +139,7 @@ div{
   color:gainsboro;
   left: 20%
 }
-.myUserImg {
+.mineUserImg {
   display: inline-block;
   width:40px;
   height:40px;
@@ -158,7 +153,6 @@ div{
   display: inline-block;
   box-sizing: border-box;
   word-wrap:normal;
-  width: 95%;
 }
 
 .textBox{
